src/App.css
.mainContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 35vh;
}

.background {
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0;
  background-image: url("assets/background.jpg");
  background-size: contain;
  background-position: center;
  z-index: 0;
}

.accentLine {
  position: fixed;
  top: 80px;
  left: 80px;
  width: 0;
  height: calc(5vw + 6vh + 0.5vmin);
  border: 1.5px solid white;
  box-shadow: 0 0 5px rgba(255, 255, 255, 0.25),
    0 0 10px rgba(255, 255, 255, 0.5);
  z-index: 1;
}

.canvasHolder {
  position: fixed;
  top: 0;
  z-index: 0;
}

.accentHolder {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  z-index: 3;
  pointer-events: none;
}

.topLeft {
  position: absolute;
  top: 25px;
  left: 25px;
}

.bottomRight {
  position: absolute;
  bottom: 25px;
  right: 25px;
}

.accentText {
  margin: 0;
  font-family: "Courier New", monospace;
  font-size: 20px;
  font-weight: bold;
  color: white;
  text-shadow: 0 0 5px rgba(255, 255, 255, 0.25),
    0 0 10px rgba(255, 255, 255, 0.5);
}

.verticalText {
  writing-mode: vertical-rl;
}

.textBox {
  background-color: rgba(0, 0, 0, 0.9);
  border: 1px solid red;
  box-shadow: 0 0 5px rgba(254, 33, 70, 0.25), 0 0 15px rgba(254, 33, 70, 0.5);
  padding: 1.5vw;
  width: fit-content;
  z-index: 2;
  margin-bottom: 10vh;
}

.textBox pre,
.preText {
  font-family: "Courier New", monospace;
  font-weight: bold;
  user-select: none;
  font-size: calc(0.75vw + 0.5vh + 0.25vmin);
  color: white;
  text-shadow: 0 0 5px rgba(255, 255, 255, 0.25),
    0 0 10px rgba(255, 255, 255, 0.5);
  height: fit-content;
}

.preText {
  margin: 0 10px;
}

.links {
  text-decoration: none;
  color: red;
  text-shadow: 0 0 5px rgba(254, 33, 70, 0.25), 0 0 15px rgba(254, 33, 70, 0.5);
  position: relative;
  transition: color 0.1s ease-in-out, text-shadow 0.1s ease-in-out;
}

.links:hover {
  cursor: pointer;
  color: white;
  text-shadow: 0 0 5px rgba(255, 255, 255, 0.5),
    0 0 10px rgba(255, 255, 255, 0.75);
  text-decoration: underline;
}

.links:hover::after {
  color: inherit;
  content: "<";
}

.projects {
  z-index: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  width: fit-content;
  height: fit-content;
}

.projectIMG {
  box-sizing: border-box;
  max-width: 15vw;
  max-height: 85%;
  margin: 10px 0;
  border: 1px solid red;
  box-shadow: 0 0 5px rgba(254, 33, 70, 0.25), 0 0 15px rgba(254, 33, 70, 0.5);
  transition: border 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
}

.projectIMG:hover {
  border: 2px solid red;
  box-shadow: 0 0 5px rgba(254, 33, 70, 0.5), 0 0 15px rgba(254, 33, 70, 0.75);
}

.projectItem {
  display: flex;
  flex-direction: row;
  gap: 20px;
  padding: 10px;
  height: 100%;
  width: 85%;
}

.projectText {
  white-space: pre-wrap;
  text-align: left;
  padding: 0;
  margin: 0 0 10px 0;
}

.projectTextHolder {
  padding: 5px 0 0 0;
}

.projectText a {
  display: inline;
  padding: 0;
}

.navBar * {
  color: white;
  font-size: calc(1vw + 1vh + 0.25vmin);
  text-shadow: 0 0 5px rgba(255, 255, 255, 0.25),
    0 0 10px rgba(255, 255, 255, 0.5);
}

a {
  font-weight: bold;
  color: red;
}

.grad {
  color: rgb(120, 112, 126);
  text-shadow: 0 0 5px rgba(120, 112, 126, 0.25),
    0 0 10px rgba(120, 112, 126, 0.5);
}

/* General container styles */
.projects-container {
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-top: 30vh;
  height: 30vh;
  z-index: 2;
  width: 70vw;
  justify-content: center;
}

.projects-container pre {
  color: white;
  margin-top: 1vh;
  margin-bottom: 0;
}

.section-title {
  font-size: calc(1vw + 1vh + 0.5vmin);
}

.section .links {
  font-size: calc(1vw + 0.5vh + 0.5vmin);
}

.section {
  background-color: rgba(0, 0, 0, 0.9);
  border: 1px solid red;
  box-shadow: 0 0 5px rgba(254, 33, 70, 0.25), 0 0 15px rgba(254, 33, 70, 0.5);
  text-align: center;
  margin: 2rem 0;
  cursor: pointer;
  transition: all 0.3s ease;
  overflow: hidden;
}

.section:hover {
  box-shadow: 0 0 10px rgba(254, 33, 70, 0.85), 0 0 20px rgba(254, 33, 70, 1);
}

/* Carousel styles */
.carousel-container {
  position: relative;
  width: 100%;
  overflow: hidden;
  margin-top: 1rem;
  border-top: 1px solid red;
}

.carousel-content {
  display: flex;
  transition: transform 0.5s ease-in-out;
  height: 100%;
}

.carousel-item {
  flex: 0 0 100%;
  display: none;
  justify-content: center;
  align-items: center;
}

.carousel-item.active {
  display: flex;
}

.carousel-button {
  position: absolute;
  bottom: 5%;
  background-color: transparent;
  border: none;
  color: white;
  font-size: 2rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  z-index: 2;
  transition: all 0.5s ease-in-out;
  border-radius: 5%;
}

.carousel-button:hover {
  color: red;
  background-color: rgba(0, 0, 0, 0.8);
}

.carousel-button.prev {
  left: 10px;
}

.carousel-button.next {
  right: 10px;
}

.carousel-indicators {
  position: absolute;
  display: flex;
  justify-content: center;
  bottom: 10%;
  width: 100%;
}

.indicator {
  width: 10px;
  height: 10px;
  margin: 0 5px;
  background-color: white;
  border-radius: 50%;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.indicator.active {
  background-color: red;
}

@media (max-width: 480px) {
  .projects-container {
    margin-top: 0;
  }

  .carousel-indicators {
    bottom: 0%;
  }

  .carousel-button {
    bottom: 0%;
  }

  .projectItem {
    padding: 0;
    margin-top: 10px;
    width: 95%;
    gap: 5px;
  }

  .preText.projectText {
    margin-top: 0;
    margin-bottom: 5px;
  }

  .projectTextHolder {
    padding: 0;
  }

  .accentLine {
    display: none;
  }

  .navBar {
    display: none;
  }

  .textBox {
    padding: 8px;
    margin-bottom: 8vh !important;
  }

  .projects {
    width: 90vw;
    flex-direction: column;
  }

  .projects .textBox {
    margin: 25px 0 25px 0 !important;
  }

  .projectIMG {
    height: 100px;
    max-width: 100px;
    margin: 0;
  }

  .rightSword {
    right: 38px;
  }

  * {
    font-size: 10px !important;
  }
}

